--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -82,11 +82,12 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="65dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="43dp"
         android:layout_marginTop="51dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -104,16 +105,19 @@
         android:textColor="#2A2C2D"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="128dp" />
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toStartOf="@+id/imageView5"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
         android:layout_marginTop="51dp"
         android:layout_marginEnd="61dp"
+        android:layout_marginBottom="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button3"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -125,6 +129,7 @@
         android:layout_height="22dp"
         android:layout_marginTop="15dp"
         android:gravity="center_horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/text_end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3">
@@ -136,7 +141,6 @@
             android:layout_marginStart="55dp"
             android:layout_marginEnd="15dp"
             android:fontFamily="@font/montserrat"
-
             android:text="Register"
             android:textAlignment="center"
             android:textAllCaps="false"
