--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -22,41 +22,121 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@mipmap/ic_launcher_round"/>
+        app:srcCompat="@mipmap/ic_launcher_round"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/user_info"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
+        android:layout_marginStart="14dp"
         android:layout_marginTop="18dp"
         android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@+id/avatar"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_medium"
             android:text="TextView"
-            android:textColor="#000"
-            android:textSize="22sp"
-            tools:layout_editor_absoluteY="41dp" />
-
-        <TextView
-            android:id="@+id/age"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textColor="#000"
-            tools:layout_editor_absoluteY="71dp" />
+            android:textColor="#555"
+            android:textSize="17sp" />
 
         <TextView
             android:id="@+id/from"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/roboto"
             android:text="TextView"
-            android:textColor="#000"
-            tools:layout_editor_absoluteY="71dp" />
+            android:textColor="#80555555"
+            android:textSize="13sp" />
 
+        <TextView
+            android:id="@+id/last_check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/roboto_light"
+            android:text="TextView"
+            android:textColor="#80555555"
+            android:textSize="10sp" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/photography"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toEndOf="@+id/avatar"
+        app:layout_constraintTop_toBottomOf="@+id/user_info"
+        app:srcCompat="@drawable/ic_art_photography"/>
+
+    <ImageView
+        android:id="@+id/sport_mountainbike"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toEndOf="@+id/photography"
+        app:layout_constraintTop_toBottomOf="@+id/user_info"
+        app:srcCompat="@drawable/ic_sports_mountainbike_2" />
+
+    <ImageView
+        android:id="@+id/cello"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toEndOf="@+id/sport_mountainbike"
+        app:layout_constraintTop_toBottomOf="@+id/user_info"
+        app:srcCompat="@drawable/ic_playmusic_cello"/>
+
+    <TextView
+        android:id="@+id/text_photography"
+        android:layout_width="55dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="3dp"
+        android:fontFamily="@font/roboto_light"
+        android:text="Фотография"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textColor="#80555555"
+        android:textSize="7sp"
+        app:layout_constraintStart_toEndOf="@+id/avatar"
+        app:layout_constraintTop_toBottomOf="@+id/photography" />
+
+    <TextView
+        android:id="@+id/bike"
+        android:layout_width="55dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="3dp"
+        android:fontFamily="@font/roboto_light"
+        android:gravity="center"
+        android:text="Велоспорт"
+        android:textAlignment="center"
+        android:textColor="#80555555"
+        android:textSize="7sp"
+        app:layout_constraintStart_toEndOf="@+id/text_photography"
+        app:layout_constraintTop_toBottomOf="@+id/sport_mountainbike" />
+
+    <TextView
+        android:id="@+id/classic_music"
+        android:layout_width="55dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="3dp"
+        android:fontFamily="@font/roboto_light"
+        android:gravity="center"
+        android:text="Классическая музыка"
+        android:textAlignment="center"
+        android:textColor="#80555555"
+        android:textSize="7sp"
+        app:layout_constraintStart_toEndOf="@+id/bike"
+        app:layout_constraintTop_toBottomOf="@+id/cello" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
