--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -139,4 +139,15 @@
         app:layout_constraintStart_toEndOf="@+id/bike"
         app:layout_constraintTop_toBottomOf="@+id/cello" />
 
+    <ImageView
+        android:id="@+id/scroll"
+        android:layout_width="5dp"
+        android:layout_height="12dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="26dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cello"
+        app:layout_constraintTop_toBottomOf="@+id/user_info"
+        app:srcCompat="@drawable/ic_scrol" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
